# ReversibleAI

./: .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: ci.yml
config/: default.yaml
reversibleai/: __init__.py
reversibleai/cli/: __init__.py  commands.py  interactive.py  main.py  plugin_commands.py
reversibleai/core/: __init__.py  config.py  config_schema.py  constants.py  exceptions.py  logging.py  security.py  validation.py
reversibleai/core/annotations/: __init__.py  api_info.py  database.py  manager.py
reversibleai/core/hash_patterns/: __init__.py  matcher.py  signatures.py  yara.py
reversibleai/core/loader/: __init__.py  base.py  elf_loader.py  factory.py  macho_loader.py  pe_loader.py
reversibleai/core/reports/: __init__.py  formatters.py  generator.py
reversibleai/core/runtime_emulator/: __init__.py  emulator.py  hooks.py  unicorn_engine.py
reversibleai/core/static_analyzer/: __init__.py  analyzer.py  control_flow.py  data_flow.py  disassembler.py  function_analyzer.py
reversibleai/core/string_extractor/: __init__.py  decoder.py  extractor.py  stackstrings.py
reversibleai/core/utils/: __init__.py  cache.py  parallel.py
reversibleai/plugins/: __init__.py  base.py  loader.py  registry.py
reversibleai/plugins/ghidra/: __init__.py  plugin.py
reversibleai/plugins/ida/: __init__.py  plugin.py
reversibleai/plugins/radare2/: __init__.py  plugin.py
tests/: __init__.py  conftest.py
tests/integration/: test_analyzer_integration.py  test_cli.py  test_loader_integration.py
tests/performance/: test_performance.py
tests/security/: test_security.py
tests/unit/: test_annotations.py  test_control_flow.py  test_data_flow.py  test_disassembler.py  test_exceptions.py  test_hash_patterns.py  test_loader.py  test_reports.py  test_static_analyzer.py  test_string_extractor.py
