[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "reversibleai"
version = "0.1.0"
description = "Advanced Static & Dynamic Analysis Framework for Malware Analysis"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "ReversibleAI Team", email = "info@reversibleai.com"}
]
maintainers = [
    {name = "ReversibleAI Team", email = "info@reversibleai.com"}
]
keywords = ["reverse-engineering", "malware-analysis", "static-analysis", "dynamic-analysis", "ida", "ghidra", "radare2"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.11"
dependencies = [
    "click>=8.1.0",
    "pyyaml>=6.0",
    "rich>=13.0.0",
    "loguru>=0.7.0",
    "typing-extensions>=4.5.0",
    "pydantic>=2.0.0",
    "lief>=0.13.0",
    "capstone>=5.0.0",
    "keystone-engine>=0.9.2",
    "unicorn>=2.0.1",
    "networkx>=3.0",
    "jinja2>=3.1.0",
    "requests>=2.28.0",
    "tqdm>=4.64.0",
    "colorama>=0.4.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]
docs = [
    "sphinx>=6.0.0",
    "sphinx-rtd-theme>=1.2.0",
    "myst-parser>=1.0.0",
]
ida = [
    "idapython>=7.4",
]
ghidra = [
    "ghidrabridge>=0.5.0",
]
radare2 = [
    "r2pipe>=1.9.0",
]
ml = [
    "scikit-learn>=1.3.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
]

[project.urls]
Homepage = "https://github.com/reversibleai/reversibleai"
Documentation = "https://reversibleai.readthedocs.io"
Repository = "https://github.com/reversibleai/reversibleai"
"Bug Tracker" = "https://github.com/reversibleai/reversibleai/issues"

[project.scripts]
reversibleai = "reversibleai.cli.main:main"
rai = "reversibleai.cli.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["reversibleai*"]
exclude = ["tests*"]

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["reversibleai"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.coverage.run]
source = ["reversibleai"]
omit = [
    "*/tests/*",
    "*/test_*",
    "setup.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
